--- a/src/main/resources/assets/minecraftsuggestions/lang/en_us.json
+++ b/src/main/resources/assets/minecraftsuggestions/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "enchantment.minecraftsuggestions.frost_aspect": "Frost Aspect"
+  "enchantment.minecraftsuggestions.frost_aspect": "Frost Aspect",
+  "item.minecraftsuggestions.nether_berries": "Nether Berries",
+  "block.minecraftsuggestions.nether_berry": "Nether Berry"
 }
