--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.16.3-0.4.1:
+- Optimize bonemeal particles
+- Cleanup resources
+
 1.16.3-0.4.0:
 - Update minecraft to 1.16.3
 - Remove nether bush & berries
