Sweet Berries Pie

--- a/src/main/resources/assets/minecraftsuggestions/lang/en_us.json
+++ b/src/main/resources/assets/minecraftsuggestions/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "enchantment.minecraftsuggestions.frost_aspect": "Frost Aspect"
+  "enchantment.minecraftsuggestions.frost_aspect": "Frost Aspect",
+  "item.minecraftsuggestions.sweet_berries_pie": "Sweet Berries Pie"
 }
