Optimize events listeners & Angry zombie

--- a/src/main/resources/assets/minecraftsuggestions/lang/en_us.json
+++ b/src/main/resources/assets/minecraftsuggestions/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "enchantment.minecraftsuggestions.frost_aspect": "Frost Aspect",
-  "item.minecraftsuggestions.sweet_berries_pie": "Sweet Berries Pie"
+  "item.minecraftsuggestions.sweet_berries_pie": "Sweet Berries Pie",
+  "item.minecraftsuggestions.angry_zombie_spawn_egg": "Angry Zombie Spawn Egg",
+  "entity.minecraftsuggestions.angry_zombie": "Angry Zombie"
 }
