--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.16.3-0.6.1
+- Create pt_br.json lang (Portuguese)
+- Nerf angry zombie speed
+
 1.16.3-0.6.0
 - Optimize events listeners
 - Angry zombie
