Config (client & server)

--- a/src/main/resources/assets/minecraftsuggestions/lang/en_us.json
+++ b/src/main/resources/assets/minecraftsuggestions/lang/en_us.json
@@ -2,5 +2,8 @@
   "enchantment.minecraftsuggestions.frost_aspect": "Frost Aspect",
   "item.minecraftsuggestions.sweet_berries_pie": "Sweet Berries Pie",
   "item.minecraftsuggestions.angry_zombie_spawn_egg": "Angry Zombie Spawn Egg",
-  "entity.minecraftsuggestions.angry_zombie": "Angry Zombie"
+  "entity.minecraftsuggestions.angry_zombie": "Angry Zombie",
+  "config.minecraftsuggestions.title": "Minecraft Suggestions",
+  "config.minecraftsuggestions.category.renders": "Renders",
+  "config.minecraftsuggestions.entry.villager_particles": "Villager Particles"
 }
