--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.16.3-1.0.0-beta2
+- angryZombieSpawnRate config
+- remove debug
+
 1.16.3-1.0.0-beta1
 - Add config (server & client)
 - cloth_config api
