--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+1.16.3-1.0.0
+- Add configuration system (server & client)
+- Add library cloth_config
+- Mod icon
+
 1.16.3-1.0.0-beta2
 - angryZombieSpawnRate config
 - remove debug
