--- a/src/main/resources/assets/minecraftsuggestions/lang/fr_fr.json
+++ b/src/main/resources/assets/minecraftsuggestions/lang/fr_fr.json
@@ -1,6 +1,7 @@
 {
   "enchantment.minecraftsuggestions.frost_aspect": "Aura gelé",
   "item.minecraftsuggestions.sweet_berries_pie": "Tarte aux baies",
+  "item.minecraftsuggestions.golden_beetroot": "Betterave dorée",
   "item.minecraftsuggestions.angry_zombie_spawn_egg": "Oeuf d'apparition de zombie énervé",
   "entity.minecraftsuggestions.angry_zombie": "Zombie énervé"
 }
